seems to be working

--- a/src/popup.html
+++ b/src/popup.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="popup.css">
 </head>
 <body>
-  <h1>ELDEN MAIL</h1>
+  <h1>Impostazioni</h1>
 
   <div class="setting">
     <label for="soundToggle">Enable sound</label>
@@ -15,20 +15,7 @@
     </label>
   </div>
 
-
-  <div class="setting">
-    <span>Choose banner color:</span>
-    <div id="colorChoices">
-      <div class="color-option" data-color="yellow" style="background-color: gold;"></div>
-      <div class="color-option" data-color="red" style="background-color: red;"></div>
-      <div class="color-option" data-color="blue" style="background-color: blue;"></div>
-    </div>
-  </div>
-  
-
-  <a id="kofiButton" href="https://ko-fi.com/mettignis" target="_blank">
-    <img src="https://ko-fi.com/img/githubbutton_sm.svg" alt="Donate via Ko-fi" style="width:100%; border-radius:6px;">
-  </a>
+  <a href="https://github.com/luckignolo32/ora-mando-io/" target="_blank">GitHub Repository</a>
 
   <script src="popup.js"></script>
 </body>
